<resources>
    <string name="app_name">Hello Chat</string>
    <string name="welcome">Welcome</string>
    <string name="please_sign_in_to_continue">Please Sign-in to continue</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="enter_your_contact">Enter your contact</string>
    <string name="_91">+91</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="complete_profile">COMPLETE PROFILE</string>
    <string name="upload_your_profile_picture">Upload your profile picture</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hello_chat">Hello Chat</string>
    <string name="navigationimage">NavigationImage</string>
    <string name="searchicon">SearchIcon</string>
    <string name="david_brains">David Brains</string>
    <string name="hello_kamal">Hello Kamal!</string>
    <string name="today">Today</string>
    <string name="select_contact">Select Contact</string>
    <string name="type_a_message">Type a message</string>
    <string name="hello_there">Hello there!</string>
    <string name="profile">Profile</string>
    <string name="new_group">New Group</string>
    <string name="saved_messages">Saved Messages</string>
    <string name="calls">Calls</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="kamal">Kamal</string>
    <string name="logout">Logout</string>
</resources>