<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<group android:checkableBehavior="single">-->

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/profile"/>

        <item
            android:id="@+id/menu_group"
            android:icon="@drawable/icon_group"
            android:title="@string/new_group"/>

        <item
            android:id="@+id/menu_saved_messages"
            android:icon="@drawable/icon_star"
            android:title="@string/saved_messages"/>

        <item
            android:id="@+id/menu_calls"
            android:icon="@drawable/icon_call"
            android:title="@string/calls"/>

        <item
            android:id="@+id/menu_contacts"
            android:icon="@drawable/icon_contacts"
            android:title="@string/contacts"/>

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/menu_share"
            android:icon="@drawable/icon_share"
            android:title="@string/share"/>

        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/logout"/>

    <!--</group>-->

</menu>