<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/phone_number"
        android:textColor="@color/blue_light"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginActivityNumberPicker"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/_91"
        android:textColor="@color/blue_light"
        android:textStyle="bold"
        android:layout_below="@id/textView3"/>

    <EditText
        android:id="@+id/loginActivityPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:hint="@string/enter_your_contact"
        android:inputType="number"
        android:layout_below="@id/textView3"
        android:layout_toEndOf="@id/loginActivityNumberPicker"
        tools:ignore="TextFields" />

    <ImageButton
        android:id="@+id/loginActivityContinueButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        android:scaleType="fitXY"
        android:padding="12dp"
        android:fadingEdgeLength="2dp"
        android:elevation="4dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/blue_rounded_background"
        android:layout_below="@id/loginActivityPhoneNumber"
        android:layout_centerHorizontal="true"
        tools:ignore="ContentDescription" />

</RelativeLayout>